Dynamic SVG input

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/syon/kukai#readme",
   "dependencies": {
+    "ejs": "^2.5.1",
     "express": "^4.14.0",
     "jade": "^1.11.0"
   }
