--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "gulp",
+    "bundle": "gulp bundle",
+    "spa": "gulp spa"
   },
   "repository": {
     "type": "git",
@@ -18,8 +20,33 @@
   },
   "homepage": "https://github.com/syon/kukai#readme",
   "dependencies": {
+    "axios": "^0.13.1",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
-    "jade": "^1.11.0"
+    "html-to-react": "^1.0.0",
+    "jade": "^1.11.0",
+    "jquery": "^3.1.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "dotenv": "^2.0.0",
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
+    "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.1.0",
+    "minifyify": "^7.3.3",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
