--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/syon/kukai#readme",
   "dependencies": {
-    "axios": "^0.13.1",
+    "axios": "^0.16.0",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "html-to-react": "^1.0.0",
@@ -28,24 +28,25 @@
     "jquery": "^3.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
-    "dotenv": "^2.0.0",
+    "browserify": "^14.3.0",
+    "dotenv": "^4.0.0",
     "eslint": "^3.1.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.1.0",
     "minifyify": "^7.3.3",
+    "react-tap-event-plugin": "^2.0.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   }
